src/blocks/image/style.scss
.wp-block-uagb-image {
	&--align-none {
		margin-left: auto;
		margin-right: auto;
	}
	&--align-left,
	&--align-right,
	&--align-center {
		display: table;
		> figcaption {
			display: table-caption;
			caption-side: bottom;
			text-align: center;
		}
	}
	figcaption {
		margin-top: 0.5em;
		margin-bottom: 1em;
	}
	&--align-wide,
	&--align-full {
		img {
			height: auto;
			width: 100%;
		}
	}
	&--align-left {
		margin-right: auto;
		margin-left: 0;
	}
	&--align-right {
		margin-left: auto;
		margin-right: 0;
	}
	&--align-center {
		margin-left: auto;
		margin-right: auto;
		text-align: center;
	}
	&--layout-overlay {
		position: relative;
		&__color-wrapper {
			position: absolute;
			left: 0;
			top: 0;
			right: 0;
			bottom: 0;
			opacity: 0.2;
			background: rgba(#000000, 0.5);
			transition: opacity .35s ease-in-out;
		}
		&:hover {
			.wp-block-uagb-image--layout-overlay__color-wrapper {
				opacity: 1;
			}
		}
		&__inner {
			position: absolute;
			left: 15px;
			right: 15px;
			bottom: 15px;
			top: 15px;
			display: flex;
			align-items: center;
			justify-content: center;
			flex-direction: column;
			border-style: solid;
			border-color: #fff;
			&.top-left,
			&.top-center,
			&.top-right {
				justify-content: flex-start;
			}
			&.bottom-left,
			&.bottom-center,
			&.bottom-right {
				justify-content: flex-end;
			}
			&.top-left,
			&.center-left,
			&.bottom-left {
				align-items: flex-start;
			}
			&.top-right,
			&.center-right,
			&.bottom-right {
				align-items: flex-end;
			}
			.uagb-image-heading {
				color: #fff;
				transition: transform .35s,opacity .35s ease-in-out;
				transform: translate3d(0, 24px, 0);
			}
			.uagb-image-separator {
				width: 30%;
				border-top-width: 2px;
				border-top-color: #fff;
				border-top-style: solid;
				margin-bottom: 10px;
				opacity: 0;
				transition: transform .40s,opacity .40s ease-in-out;
				transform: translate3d(0, 30px, 0);
			}

			.uagb-image-caption {
				opacity: 0;
				overflow: visible;
				transition-delay: 50ms;
				color: #fff;
				transition: transform .45s,opacity .45s ease-in-out;
				transform: translate3d(0, 35px, 0);
			}
			&:hover {
				.uagb-image-heading,
				.uagb-image-separator,
				.uagb-image-caption {
					opacity: 1;
					transform: translate3d(0, 0, 0);
				}
			}
		}
	}
	// hover effect
	&--effect {
		&-zoomin {
			overflow: hidden;
			img {
				transform: scale(1);
				transition: transform .35s ease-in-out;
			}
			&:hover {
				img {
					transform: scale(1.05);
				}
			}
		}
		&-slide {
			overflow: hidden;
			img {
				width: calc(100% + 40px);
				max-width: none !important;
				transform: translate3d(-40px, 0, 0);
				transition: transform .35s ease-in-out;
			}
			&:hover {
				img {
					transform: translate3d(0, 0, 0);
				}
			}
		}
		&-grayscale {
			img {
				filter: grayscale(0%);
				transition: .35s ease-in-out;
			}
			&:hover {
				img {
					filter: grayscale(100%);
				}
			}
		}
		&-blur {
			img {
				filter: blur(0px);
				transition: .35s ease-in-out;
			}
			&:hover {
				img {
					filter: blur(3px);
				}
			}
		}
	}
}

